# web-framework

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile_html  LICENSE  README.md  akrava_web-server-config.cmake  annotated.html  app_8h.html  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  appveyor.yml  auth__middleware_8h.html  auth__middleware_8h__incl.map  auth__middleware_8h__incl.md5  auth__middleware_8h_source.html  auth__strategy_8h.html  auth__strategy_8h__dep__incl.map  auth__strategy_8h__dep__incl.md5  auth__strategy_8h__incl.map  auth__strategy_8h__incl.md5  auth__strategy_8h_source.html  authorized__handler_8h.html  authorized__handler_8h__incl.map  authorized__handler_8h__incl.md5  authorized__handler_8h_source.html  bitbucket-pipelines.yml  classApp-members.html  classApp.html  classApp__coll__graph.md5  classAuthMiddleware-members.html  classAuthMiddleware.html  classAuthMiddleware__coll__graph.map  classAuthMiddleware__coll__graph.md5  classAuthMiddleware__inherit__graph.map  classAuthMiddleware__inherit__graph.md5  (+557 more)
client/: .gitignore  client.cpp  client.h  client.pro  json_highlighter.cpp  json_highlighter.h  main_window.cpp  main_window.h  main_window.ui
docs/: .gitignore  Doxyfile_html  generate_documentation.sh  index.md  web_server.doxyfile  КП-71_Кравчук_Аркадій_ОП-3_Звіт.docx  КП-71_Кравчук_Аркадій_ОП-3_ТЗ.docx
examples/hello_world/: CMakeLists.txt  main.cpp
examples/simple_site/: CMakeLists.txt  DatabaseMiddleware.h  main.cpp
examples/simple_site/data/: common.css  order.html  track.html
examples/site_with_db/: CMakeLists.txt  DatabaseMiddleware.cpp  DatabaseMiddleware.h  Dockerfile  main.cpp
examples/site_with_db/assets/: common.css
examples/site_with_db/data/: calculate.html  common.css  estimate.html  feedback.mustache  index.mustache  map.html  order.html  track.html
examples/site_with_db/db/: db_file
examples/site_with_db/include/: api.h  auth.h  calculate.h  calculate_post.h  common.h  common_info.h  config.h  cookie.h  database_middleware.h  estimate.h  estimate_post.h  feedback.h  feedback_post.h  index.h  login.h  logout.h  map.h  news.h  order.h  order_post.h  receipts.h  receipts_add.h  receipts_change.h  receipts_create.h  receipts_delete.h  receipts_edit.h  render_template.h  template.h  track.h  user.h
examples/site_with_db/src/: api.cpp  auth.cpp  calculate.cpp  calculate_post.cpp  common.cpp  common_info.cpp  config.cpp  cookie.cpp  database_middleware.cpp  estimate.cpp  estimate_post.cpp  feedback.cpp  feedback_post.cpp  index.cpp  login.cpp  logout.cpp  map.cpp  news.cpp  order.cpp  order_post.cpp  receipts.cpp  receipts_add.cpp  receipts_change.cpp  receipts_create.cpp  receipts_delete.cpp  receipts_edit.cpp  render_template.cpp  template.cpp  track.cpp  user.cpp
examples/site_with_db/templates/: common.mustache  feedback.mustache  login.mustache  receipt.mustache  receipts.mustache
html/: graph_legend.html
include/: app.h  auth_middleware.h  auth_strategy.h  authorized_handler.h  context.h  cookie_auth.h  cookie_entity.h  cookie_entity_default.h  cookie_entity_factory.h  cookie_entity_http.h  cookie_entity_week.h  cookie_middleware.h  default_response.h  entity.h  file_handler.h  form_entity.h  form_middleware.h  form_multipart_data.h  form_parser.h  form_urlencoded.h  fs_builder.h  fs_component.h  fs_creator.h  fs_file.h  fs_folder.h  fs_middleware.h  fs_unix_builder.h  fs_windows_builder.h  handler.h  headers.h  html_middleware.h  http.h  init_params.h  json_middleware.h  jwt_auth.h  message_body.h  middleware.h  network.h  parser_http.h  redirect_response.h  (+9 more)
latex/: refman.tex
rtf/: refman.rtf
scripts/: akrava_web-server-config.cmake  openssl.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+49 more)
src/: app.cpp  auth_middleware.cpp  authorized_handler.cpp  context.cpp  cookie_auth.cpp  cookie_entity.cpp  cookie_entity_default.cpp  cookie_entity_factory.cpp  cookie_entity_http.cpp  cookie_entity_week.cpp  cookie_middleware.cpp  default_response.cpp  file_handler.cpp  form_entity.cpp  form_middleware.cpp  form_multipart_data.cpp  form_parser.cpp  form_urlencoded.cpp  fs_creator.cpp  fs_file.cpp  fs_folder.cpp  fs_middleware.cpp  fs_unix_builder.cpp  fs_windows_builder.cpp  handler.cpp  headers.cpp  html_middleware.cpp  http.cpp  init_params.cpp  json_middleware.cpp  jwt_auth.cpp  message_body.cpp  middleware.cpp  network.cpp  parser_http.cpp  redirect_response.cpp  request.cpp  response.cpp  socket.cpp  socket_unix_api.cpp  (+3 more)
web_server/: .gitignore  CMakeLists.txt  main.cpp
web_server/data/: calculate.html  common.css  common.html  estimate.html  feedback.html  info.html  map.html  news.html  track.html
web_server/db/: db_file
web_server/include/: app.h  context.h  cookie_entity.h  cookie_middleware.h  db_manager.h  default_response.h  file_handler.h  form_middleware.h  handler.h  headers.h  html_middleware.h  http.h  init_params.h  json_middleware.h  log_manager.h  message_body.h  middleware.h  parser_http.h  redirect_response.h  request.h  response.h  runtime_exception.h  socket.h  uri.h
web_server/src/: app.cpp  context.cpp  cookie_entity.cpp  cookie_middleware.cpp  db_manager.cpp  file_handler.cpp  form_middleware.cpp  handler.cpp  headers.cpp  html_middleware.cpp  http.cpp  init_params.cpp  json_middleware.cpp  log_manager.cpp  message_body.cpp  middleware.cpp  parser_http.cpp  request.cpp  response.cpp  socket.cpp  uri.cpp
