cmake_minimum_required(VERSION 3.8)
project(hello_world LANGUAGES CXX)
IF (WIN32)
	include_directories("C:\\Program Files (x86)\\nlohmann_json\\include")
	include_directories("C:\\Program Files\\boost\\include\\boost-1_70")
	include_directories("C:\\Program Files (x86)\\mstch\\include")
	include_directories("C:\\Program Files (x86)\\akrava_web-server\\include")
ENDIF()
find_package(akrava_web-server)
set(CMAKE_CXX_STANDARD 17)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} akrava::akrava_web-server)